test/trivial/deitz/vars-scopes/self-defs.good
self-defs.chpl:2: error: statement uses variable 'a' to define itself
self-defs.chpl:2: note: the variable 'a' is used to define itself here
self-defs.chpl:5: error: statement uses variable 'a' to define itself
self-defs.chpl:5: note: the variable 'a' is used to define itself here
self-defs.chpl:10: error: statement uses variable 'a' to define itself
self-defs.chpl:10: note: the variable 'a' is used to define itself here
self-defs.chpl:12: error: statement uses variable 'b' to define itself
self-defs.chpl:12: note: the variable 'b' is used to define itself here
