test/trivial/deitz/vars-scopes/self-defs.chpl

var a = a;  // a#1

if a > 1 {
  var a = a;  // a#2
  writeln(a);
}

if a > 2 {
  var a: int = a;  // a#3
  writeln(a);
  var b: int = b;
}

writeln(a);
